--- a/app.json
+++ b/app.json
@@ -33,6 +33,12 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
+      ],
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "La aplicación necesita acceso a tu galería para seleccionar imágenes de productos."
+        }
       ]
     ],
     "experiments": {
