--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
+    "expo-image-manipulator": "^13.1.7",
+    "expo-image-picker": "^16.1.4",
     "expo-linking": "~7.1.7",
     "expo-notifications": "^0.31.4",
     "expo-router": "~5.1.4",
